kubernetes/mysql-exporter-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqld-exporter
  namespace: default
  labels:
    app: mysqld-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqld-exporter
  template:
    metadata:
      labels:
        app: mysqld-exporter
    spec:
      containers:
        - name: mysqld-exporter
          image: prom/mysqld-exporter:v0.16.0
          imagePullPolicy: IfNotPresent
          args:
            - --mysqld.address=service-symfony-shop-db:3306
            - --mysqld.username=root
          ports:
            - containerPort: 9104
              name: metrics
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9104
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9104
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
