kubernetes/rabbitmqdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symfony-shop-rabbitmq
  labels:
    app: symfony-shop-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: symfony-shop-rabbitmq
  template:
    metadata:
      labels:
        app: symfony-shop-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          readinessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
