kubernetes/appservice.yml
apiVersion: v1
kind: Service
metadata:
  name: service-sal-shopapp-new
  labels:
    app: sal-shopapp-new
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  selector:
    app: sal-shopapp-new
    type: fe-end
