kubernetes/dbservice.yml
apiVersion: v1
kind: Service
metadata:
  name: service-symfony-shop-db
  labels:
    app: symfony-shop-db
    role: primary
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: symfony-shop-db
    role: primary
---
apiVersion: v1
kind: Service
metadata:
  name: service-symfony-shop-db-read
  labels:
    app: symfony-shop-db
    role: replica
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: symfony-shop-db
    role: replica
