kubernetes/mysql-exporter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqld-exporter
  namespace: default
  labels:
    app: mysqld-exporter
spec:
  type: ClusterIP
  selector:
    app: mysqld-exporter
  ports:
    - name: metrics
      protocol: TCP
      port: 9104
      targetPort: 9104
