kubernetes/rabbitmqservice.yml
apiVersion: v1
kind: Service
metadata:
  name: service-symfony-shop-rabbitmq
  labels:
    app: symfony-shop-rabbitmq
spec:
  selector:
    app: symfony-shop-rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
