kubernetes/redis-exporter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  labels:
    app: redis-exporter
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9121"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app: redis-exporter
  ports:
    - name: metrics
      protocol: TCP
      port: 9121
      targetPort: 9121
